Removed unused logger and use List.of